# litchi_wp

./: CHANGELOG.md  Makefile  README.md  pyproject.toml  requirements_dev.txt  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/: index.html  search.js
docs/litchi_wp/: action.html  altitude.html  enums.html  gimbal.html  photo.html  poi.html  waypoint.html
src/litchi_wp/: __init__.py  action.py  action.pyi  altitude.py  altitude.pyi  enums.py  enums.pyi  gimbal.py  gimbal.pyi  photo.py  photo.pyi  poi.py  poi.pyi  waypoint.py  waypoint.pyi
tests/action/: __init__.py  test_action.py
tests/altitude/: test_altitude.py
tests/gimbal/: test_gimbal.py
tests/photo/: test_photo.py
tests/poi/: test_poi.py
tests/waypoint/: test_waypoint.py  waypoints.csv
